--- a/app/src/main/res/layout/activity_trips.xml
+++ b/app/src/main/res/layout/activity_trips.xml
@@ -1,14 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".TripsActivity">
-
-    <include
-        android:id="@+id/include"
-        layout="@layout/activity_maps" />
 
     <TextView
         android:id="@+id/textView"
@@ -19,26 +15,30 @@
         android:gravity="center"
         android:paddingTop="20dp"
         android:paddingBottom="20dp"
-        android:text="PAST TRIPS"
+        android:text="@string/heading_past_trips"
         android:textColor="@color/white"
         android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/include" />
+        android:textStyle="bold" />
+
 
     <View
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="5dp"
-        android:layout_above="@id/textView"
         android:background="@color/darkgreen"
-        tools:layout_editor_absoluteY="60dp" />
+        android:translationY="60dp"/>
 
     <View
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="3dp"
-        android:layout_above="@id/textView"
         android:background="@drawable/shadow"
-        tools:layout_editor_absoluteY="65dp" />
+        android:translationY="65dp" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <include
+        android:id="@+id/navigation_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        layout="@layout/bottom_navigation" />
+
+
+</RelativeLayout>
