--- a/app/src/main/res/layout/bottom_navigation.xml
+++ b/app/src/main/res/layout/bottom_navigation.xml
@@ -5,10 +5,11 @@
     android:layout_height="wrap_content"
     android:layout_gravity="bottom">
 
-    <include
-        android:id="@+id/navigation_bar"
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        layout="@layout/bottom_navigation" />
+        android:paddingBottom="5dp"
+        app:menu="@menu/bottom_navigation_menu" />
 
 </LinearLayout>
