--- a/app/src/main/res/layout/trips_activity.xml
+++ b/app/src/main/res/layout/trips_activity.xml
@@ -20,7 +20,6 @@
         android:textSize="20sp"
         android:textStyle="bold" />
 
-
     <View
         android:layout_width="wrap_content"
         android:layout_height="5dp"
@@ -32,6 +31,10 @@
         android:layout_height="3dp"
         android:background="@drawable/shadow"
         android:translationY="65dp" />
+
+    <include
+
+        layout="@layout/trips_content" />
 
     <include
         android:id="@+id/navigation_bar"
