--- a/app/src/main/res/layout/list_item_image.xml
+++ b/app/src/main/res/layout/list_item_image.xml
@@ -1,18 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="8dp"
-    android:orientation="horizontal">
+    android:layout_margin="0dp"
+    android:orientation="vertical"
+    android:padding="0dp">
 
-    <ImageView
-        android:id="@+id/image_item"
-        android:layout_width="0dp"
-        android:layout_height="70dp"
-        android:layout_weight="1" />
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="40dp"
+        android:layout_marginRight="40dp"
+        android:backgroundTint="@color/darkgrey"
+        app:cornerRadius="5dp">
 
-    <LinearLayout
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:gravity="bottom|left"
+            android:textSize="34sp"
+            android:textStyle="bold" />
+
+    </Button>
+    <!--<LinearLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="4"
@@ -29,11 +42,38 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/preview"
+            android:id="@+id/date"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:gravity="top|left"
-            />
+            android:gravity="top|left" />
+
+        <TextView
+            android:id="@+id/distance"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:gravity="top|left" />
+
+        <TextView
+            android:id="@+id/numOfLocations"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:gravity="top|left" />
     </LinearLayout>
+
+    <ImageView
+        android:id="@+id/image_item"
+        android:layout_width="wrap_content"
+        android:layout_height="70dp"
+        android:layout_weight="1"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        app:icon="@drawable/ic_baseline_arrow_forward_ios_24" />-->
+
 </LinearLayout>
