--- a/app/src/main/res/layout/list_item_image.xml
+++ b/app/src/main/res/layout/list_item_image.xml
@@ -3,29 +3,91 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="0dp"
-    android:orientation="vertical"
-    android:padding="0dp">
+    android:layout_margin="20dp"
+    android:padding="10dp"
+    android:layout_weight="1"
+    android:background="@color/darkgrey"
+    android:orientation="horizontal">
 
-    <Button
-        android:layout_width="match_parent"
+    <LinearLayout
+        android:layout_width="0dp"
         android:layout_height="match_parent"
-        android:layout_marginLeft="40dp"
-        android:layout_marginRight="40dp"
-        android:backgroundTint="@color/darkgrey"
-        app:cornerRadius="5dp">
+        android:layout_weight="1"
+        android:gravity="center"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/title"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:gravity="bottom|left"
-            android:textSize="34sp"
-            android:textStyle="bold" />
+            android:gravity="left"
+            />
 
-    </Button>
-    <!--<LinearLayout
+        <TextView
+            android:id="@+id/date"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:gravity="left"
+            />
+
+        <TextView
+            android:id="@+id/distance"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:gravity="left"
+            />
+
+        <TextView
+            android:id="@+id/numOfLocations"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:gravity="left"
+            />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:orientation="horizontal">
+        <ImageView
+            android:id="@+id/image_item"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="3"
+            android:background="@drawable/joe2"/>
+
+        <Button
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:backgroundTint="@color/transparent"
+
+            app:icon="@drawable/ic_baseline_arrow_forward_ios_24" />
+    </LinearLayout>
+
+</LinearLayout>
+
+<!--<?xml version="1.0" encoding="utf-8"?>
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_margin="8dp"
+    android:orientation="horizontal">
+
+    <ImageView
+        android:id="@+id/image_item"
+        android:layout_width="0dp"
+        android:layout_height="70dp"
+        android:layout_weight="1" />
+
+    <LinearLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="4"
@@ -38,42 +100,15 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:gravity="bottom|left"
-            android:textSize="34sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            />
 
         <TextView
-            android:id="@+id/date"
+            android:id="@+id/preview"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:gravity="top|left" />
-
-        <TextView
-            android:id="@+id/distance"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:gravity="top|left" />
-
-        <TextView
-            android:id="@+id/numOfLocations"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:gravity="top|left" />
+            android:gravity="top|left"
+            />
     </LinearLayout>
-
-    <ImageView
-        android:id="@+id/image_item"
-        android:layout_width="wrap_content"
-        android:layout_height="70dp"
-        android:layout_weight="1"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        app:icon="@drawable/ic_baseline_arrow_forward_ios_24" />-->
-
-</LinearLayout>
+</LinearLayout>-->
