Added notification snackbar

--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -93,6 +93,11 @@
         android:visibility="gone"
         app:cornerRadius="15dp" />
 
+    <View
+        android:id="@+id/notification_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
     <EditText
         android:id="@+id/trip_name_edit_text"
         android:layout_width="wrap_content"
