--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -2,10 +2,10 @@
 <resources>
     <array name="preloaded_fonts" translatable="false">
         <item>@font/nunito_bold</item>
+        <item>@font/nunito_extrabold</item>
         <item>@font/nunito_medium</item>
-        <item>@font/nunito_semibold</item>
         <item>@font/raleway_bold</item>
+        <item>@font/raleway_extrabold</item>
         <item>@font/raleway_medium</item>
-        <item>@font/raleway_semibold</item>
     </array>
 </resources>
