Added the notification bar and set the least important view to invisible at the main_activity.xml

--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -96,7 +96,8 @@
     <View
         android:id="@+id/notification_view"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:visibility="invisible"/>
 
     <EditText
         android:id="@+id/trip_name_edit_text"
