--- a/app/src/main/res/layout/trip_list_item.xml
+++ b/app/src/main/res/layout/trip_list_item.xml
@@ -3,18 +3,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="20dp"
-    android:padding="10dp"
-    android:layout_weight="1"
-    android:background="@color/darkgrey"
-    android:orientation="horizontal">
+    android:layout_margin="15dp"
+    android:padding="20dp"
+    android:background="@drawable/rounded_corners_darkgrey"
+    android:orientation="horizontal"
+    android:clickable="true">
 
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:gravity="center"
-        android:layout_marginRight="20dp"
+        android:textAlignment="textStart"
+        android:gravity="start"
         android:orientation="vertical">
 
         <LinearLayout
@@ -22,50 +22,42 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:gravity="center"
+            android:layout_marginBottom="8dp"
             android:orientation="horizontal">
+
             <TextView
                 android:id="@+id/title"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center|left"
-                android:textColor="@color/white"
-                android:text="Title"
-                />
-            <TextView
-                android:id="@+id/title-val"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center|right"
-                android:textColor="@color/white"
-                android:text="Me at the Zoo"
-                />
+                android:gravity="start"
+                android:textSize="22sp"
+                android:fontFamily="@font/raleway_bold"
+                android:textColor="@color/white" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:gravity="center"
+            android:gravity="start"
+            android:layout_marginBottom="8dp"
             android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/name_date"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center|start"
+                android:text="Date - "
+                android:fontFamily="@font/raleway_bold"
+                android:textColor="@color/white" />
             <TextView
                 android:id="@+id/date"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center|left"
+                android:layout_marginStart="5dp"
+                android:fontFamily="@font/raleway_medium"
                 android:textColor="@color/white"
-                android:text="Date"
-                />
-            <TextView
-                android:id="@+id/date-val"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center|right"
-                android:textColor="@color/white"
-                android:text="3 Oct 2021"
                 />
         </LinearLayout>
 
@@ -73,25 +65,24 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:gravity="center"
+            android:gravity="start"
+            android:layout_marginBottom="8dp"
             android:orientation="horizontal">
+            <TextView
+                android:id="@+id/name_distance"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:fontFamily="@font/raleway_bold"
+                android:textColor="@color/white"
+                android:text="Distance - "
+                />
             <TextView
                 android:id="@+id/distance"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center|left"
+                android:layout_marginStart="5dp"
+                android:fontFamily="@font/raleway_medium"
                 android:textColor="@color/white"
-                android:text="Distance"
-                />
-            <TextView
-                android:id="@+id/date-val"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center|right"
-                android:textColor="@color/white"
-                android:text="2 km"
                 />
         </LinearLayout>
 
@@ -99,25 +90,23 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:gravity="center"
+            android:gravity="start"
             android:orientation="horizontal">
+            <TextView
+                android:id="@+id/name_numOfLocations"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:textColor="@color/white"
+                android:fontFamily="@font/raleway_bold"
+                android:text="Number of Locations - "
+                />
             <TextView
                 android:id="@+id/numOfLocations"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center|left"
+                android:layout_marginStart="5dp"
+                android:fontFamily="@font/raleway_medium"
                 android:textColor="@color/white"
-                android:text="Number of Locations"
-                />
-            <TextView
-                android:id="@+id/date-val"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center|right"
-                android:textColor="@color/white"
-                android:text="5"
                 />
         </LinearLayout>
 
@@ -127,62 +116,33 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:gravity="center"
+        android:textAlignment="textEnd"
+        android:gravity="end"
         android:orientation="horizontal">
-        <ImageView
-            android:id="@+id/image_item"
-            android:layout_width="0dp"
-            android:layout_height="100dp"
-            android:layout_weight="3"
-            android:background="@drawable/joe2"/>
 
-        <Button
-            android:layout_width="0dp"
+        <FrameLayout
+            android:layout_width="100dp"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:backgroundTint="@color/darkgrey"
+            android:orientation="vertical">
+            <ImageView
+                android:id="@+id/image_bg"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:layout_gravity="top|end"
+                android:background="@drawable/joe2"/>
+            <ImageView
+                android:id="@+id/image_item"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:layout_gravity="bottom|start"/>
+        </FrameLayout>
+
+        <ImageView
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center|end"
+            android:background="@null"
             style="?android:attr/borderlessButtonStyle"
-            app:icon="@drawable/ic_baseline_arrow_forward_ios_24" />
+            android:src="@drawable/ic_baseline_arrow_forward_ios_24" />
     </LinearLayout>
-
 </LinearLayout>
-
-<!--<?xml version="1.0" encoding="utf-8"?>
-
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="8dp"
-    android:orientation="horizontal">
-
-    <ImageView
-        android:id="@+id/image_item"
-        android:layout_width="0dp"
-        android:layout_height="70dp"
-        android:layout_weight="1" />
-
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="4"
-        android:gravity="center"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/title"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:gravity="bottom|left"
-            android:textStyle="bold"
-            />
-
-        <TextView
-            android:id="@+id/preview"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:gravity="top|left"
-            />
-    </LinearLayout>
-</LinearLayout>-->
