--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -7,7 +7,7 @@
     tools:context=".MainActivity">
 
     <include
-        layout="@layout/maps"
+        layout="@layout/map_widget"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
