Reordered the files

--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -35,17 +35,17 @@
         android:layout_alignParentRight="true"
         android:layout_marginRight="15dp"
         android:layout_marginBottom="15dp"
-        android:backgroundTint="#545454"
-        android:drawableRight="@drawable/ic_outline_arrow_circle_right_24"
-        android:elevation="30dp"
-        android:fontFamily="@font/nunito_extrabold"
-        android:paddingLeft="15dp"
         android:paddingTop="10dp"
         android:paddingRight="15dp"
         android:paddingBottom="10dp"
+        android:paddingLeft="15dp"
+        app:cornerRadius="15dp"
+        android:elevation="30dp"
+        android:backgroundTint="#545454"
+        android:drawableRight="@drawable/ic_outline_arrow_circle_right_24"
         android:text="NEW TRIP"
-        android:textSize="25dp"
-        app:cornerRadius="15dp" />
+        android:textSize="25sp"
+        android:fontFamily="@font/nunito_extrabold"/>
 
     <Button
         android:id="@+id/go_button"
@@ -55,38 +55,38 @@
         android:layout_alignParentRight="true"
         android:layout_marginRight="15dp"
         android:layout_marginBottom="15dp"
-        android:backgroundTint="#545454"
-        android:drawableRight="@drawable/ic_outline_arrow_circle_right_24"
-        android:elevation="30dp"
-        android:fontFamily="@font/nunito_extrabold"
-        android:paddingLeft="15dp"
         android:paddingTop="10dp"
         android:paddingRight="15dp"
         android:paddingBottom="10dp"
+        android:paddingLeft="15dp"
+        app:cornerRadius="15dp"
+        android:elevation="30dp"
+        android:backgroundTint="#545454"
+        android:drawableRight="@drawable/ic_outline_arrow_circle_right_24"
         android:text="Go"
-        android:textSize="25dp"
-        android:visibility="gone"
-        app:cornerRadius="15dp" />
+        android:textSize="25sp"
+        android:fontFamily="@font/nunito_extrabold"
+        android:visibility="gone" />
 
     <Button
         android:id="@+id/cancel_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@id/trip_name_edit_text"
-        android:layout_toLeftOf="@+id/go_button"
         android:layout_marginRight="15dp"
         android:layout_marginBottom="15dp"
+        android:layout_toLeftOf="@+id/go_button"
         android:backgroundTint="#545454"
-        android:elevation="30dp"
-        android:fontFamily="@font/nunito_extrabold"
-        android:paddingLeft="15dp"
         android:paddingTop="10dp"
         android:paddingRight="15dp"
         android:paddingBottom="10dp"
+        android:paddingLeft="15dp"
+        app:cornerRadius="15dp"
+        android:elevation="30dp"
         android:text="Cancel"
-        android:textSize="25dp"
-        android:visibility="gone"
-        app:cornerRadius="15dp" />
+        android:textSize="25sp"
+        android:fontFamily="@font/nunito_extrabold"
+        android:visibility="gone" />
 
     <View
         android:id="@+id/notification_view"
@@ -102,18 +102,18 @@
         android:layout_alignParentRight="true"
         android:layout_marginRight="15dp"
         android:layout_marginBottom="15dp"
-        android:background="@drawable/edit_text_border"
-        android:backgroundTint="@color/white"
-        android:elevation="10dp"
-        android:fontFamily="@font/nunito_bold"
-        android:hint="TRIP NAME"
-        android:paddingLeft="30dp"
         android:paddingTop="10dp"
         android:paddingRight="30dp"
         android:paddingBottom="10dp"
+        android:paddingLeft="30dp"
+        app:cornerRadius="15dp"
+        android:elevation="10dp"
+        android:hint="TRIP NAME"
+        android:textSize="25sp"
+        android:fontFamily="@font/nunito_medium"
+        android:background="@drawable/edit_text_border"
+        android:backgroundTint="@color/white"
         android:textColor="@color/darkgrey"
-        android:textSize="25dp"
-        android:visibility="gone"
-        app:cornerRadius="15dp" />
+        android:visibility="gone" />
 
 </RelativeLayout>
