--- a/app/src/main/res/layout/activity_trips.xml
+++ b/app/src/main/res/layout/activity_trips.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,7 +7,7 @@
     tools:context=".TripsActivity">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/past_trips"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/lightgreen"
@@ -18,27 +18,27 @@
         android:text="@string/heading_past_trips"
         android:textColor="@color/white"
         android:textSize="20sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
 
 
     <View
+        android:id="@+id/past_trips_bottom_border"
         android:layout_width="wrap_content"
         android:layout_height="5dp"
         android:background="@color/darkgreen"
-        android:translationY="60dp"/>
+        app:layout_constraintTop_toTopOf="@id/past_trips"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
 
     <View
         android:layout_width="wrap_content"
         android:layout_height="3dp"
         android:background="@drawable/shadow"
-        android:translationY="65dp" />
-
-    <include
-        android:id="@+id/navigation_bar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        layout="@layout/bottom_navigation" />
-
-
-</RelativeLayout>
+        android:translationY="65dp"
+        app:layout_constraintTop_toTopOf="@id/past_trips_bottom_border"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
+</androidx.constraintlayout.widget.ConstraintLayout>
