--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -1,119 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <include
-        layout="@layout/map_widget"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-
-    <include
-        android:id="@+id/navigation_bar"
-        layout="@layout/bottom_navigation"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true" />
-
-    <include
-        layout="@layout/main_weather_widget"
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="10dp"
-        android:elevation="12dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:paddingBottom="5dp"
+        app:menu="@menu/bottom_navigation_menu"/>
 
-    <Button
-        android:id="@+id/new_trip_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@id/navigation_bar"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="15dp"
-        android:layout_marginBottom="15dp"
-        android:paddingTop="10dp"
-        android:paddingRight="15dp"
-        android:paddingBottom="10dp"
-        android:paddingLeft="15dp"
-        app:cornerRadius="15dp"
-        android:elevation="30dp"
-        android:backgroundTint="#545454"
-        android:drawableRight="@drawable/ic_outline_arrow_circle_right_24"
-        android:text="NEW TRIP"
-        android:textSize="25sp"
-        android:fontFamily="@font/nunito_extrabold"/>
+    <FrameLayout
+        android:id="@+id/fragment_container"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"/>
 
-    <Button
-        android:id="@+id/go_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@id/trip_name_edit_text"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="15dp"
-        android:layout_marginBottom="15dp"
-        android:paddingTop="10dp"
-        android:paddingRight="15dp"
-        android:paddingBottom="10dp"
-        android:paddingLeft="15dp"
-        app:cornerRadius="15dp"
-        android:elevation="30dp"
-        android:backgroundTint="#545454"
-        android:drawableRight="@drawable/ic_outline_arrow_circle_right_24"
-        android:text="Go"
-        android:textSize="25sp"
-        android:fontFamily="@font/nunito_extrabold"
-        android:visibility="gone" />
-
-    <Button
-        android:id="@+id/cancel_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@id/trip_name_edit_text"
-        android:layout_marginRight="15dp"
-        android:layout_marginBottom="15dp"
-        android:layout_toLeftOf="@+id/go_button"
-        android:backgroundTint="#545454"
-        android:paddingTop="10dp"
-        android:paddingRight="15dp"
-        android:paddingBottom="10dp"
-        android:paddingLeft="15dp"
-        app:cornerRadius="15dp"
-        android:elevation="30dp"
-        android:text="Cancel"
-        android:textSize="25sp"
-        android:fontFamily="@font/nunito_extrabold"
-        android:visibility="gone" />
-
-    <View
-        android:id="@+id/notification_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="invisible" />
-
-    <EditText
-        android:id="@+id/trip_name_edit_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@id/navigation_bar"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="15dp"
-        android:layout_marginBottom="15dp"
-        android:paddingTop="10dp"
-        android:paddingRight="30dp"
-        android:paddingBottom="10dp"
-        android:paddingLeft="30dp"
-        app:cornerRadius="15dp"
-        android:elevation="10dp"
-        android:hint="TRIP NAME"
-        android:textSize="25sp"
-        android:fontFamily="@font/nunito_medium"
-        android:background="@drawable/edit_text_border"
-        android:backgroundTint="@color/white"
-        android:textColor="@color/darkgrey"
-        android:visibility="gone" />
-
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
