--- a/app/src/main/res/layout/trip_list_item.xml
+++ b/app/src/main/res/layout/trip_list_item.xml
@@ -10,80 +10,81 @@
     android:clickable="true">
 
     <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:textAlignment="textStart"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:gravity="start"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_marginStart="10dp"
+        android:textAlignment="textStart">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:layout_marginBottom="8dp"
             android:layout_weight="1"
             android:gravity="center"
-            android:layout_marginBottom="8dp"
             android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/title"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:gravity="start"
-                android:textSize="22sp"
                 android:fontFamily="@font/raleway_bold"
-                android:textColor="@color/white" />
+                android:gravity="start"
+                android:textColor="@color/white"
+                android:textSize="15sp"
+                android:paddingBottom="0dp"/>
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:layout_marginBottom="8dp"
             android:layout_weight="1"
             android:gravity="start"
-            android:layout_marginBottom="8dp"
             android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/name_date"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:fontFamily="@font/raleway_bold"
                 android:gravity="center|start"
                 android:text="Date - "
-                android:fontFamily="@font/raleway_bold"
                 android:textColor="@color/white" />
+
             <TextView
                 android:id="@+id/date"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
                 android:fontFamily="@font/raleway_medium"
-                android:textColor="@color/white"
-                />
+                android:textColor="@color/white" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:layout_marginBottom="8dp"
             android:layout_weight="1"
             android:gravity="start"
-            android:layout_marginBottom="8dp"
             android:orientation="horizontal">
+
             <TextView
                 android:id="@+id/name_distance"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:fontFamily="@font/raleway_bold"
-                android:textColor="@color/white"
                 android:text="Distance - "
-                />
+                android:textColor="@color/white" />
+
             <TextView
                 android:id="@+id/distance"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
                 android:fontFamily="@font/raleway_medium"
-                android:textColor="@color/white"
-                />
+                android:textColor="@color/white" />
         </LinearLayout>
 
         <LinearLayout
@@ -92,32 +93,32 @@
             android:layout_weight="1"
             android:gravity="start"
             android:orientation="horizontal">
+
             <TextView
                 android:id="@+id/name_numOfLocations"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:textColor="@color/white"
                 android:fontFamily="@font/raleway_bold"
                 android:text="Number of Locations - "
-                />
+                android:textColor="@color/white" />
+
             <TextView
                 android:id="@+id/numOfLocations"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
                 android:fontFamily="@font/raleway_medium"
-                android:textColor="@color/white"
-                />
+                android:textColor="@color/white" />
         </LinearLayout>
 
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_weight="1"
         android:textAlignment="textEnd"
         android:gravity="end"
+        android:layout_marginLeft="20dp"
         android:orientation="horizontal">
 
         <FrameLayout
