--- a/app/src/main/res/layout/trip_list_item.xml
+++ b/app/src/main/res/layout/trip_list_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -23,9 +23,9 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"/>
-    </LinearLayout>
+    </LinearLayout>-->
 
-    <LinearLayout
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
@@ -172,4 +172,3 @@
                 android:src="@drawable/ic_baseline_arrow_forward_ios_24" />
         </LinearLayout>
     </LinearLayout>
-</LinearLayout>
