Change the colour of the button

--- a/app/src/main/res/layout/trips_created_fragment.xml
+++ b/app/src/main/res/layout/trips_created_fragment.xml
@@ -57,15 +57,18 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent" />
 
-    <Button
-        android:id = "@+id/add_picture"
-        android:layout_width = "60dp"
-        android:layout_height = "60dp"
-        android:background = "@drawable/round_button"
-        android:layout_marginRight="25dp"
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/add_picture"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
         android:layout_marginTop="25dp"
+        android:layout_marginRight="25dp"
         android:elevation="20dp"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/display_title"
-        app:layout_constraintRight_toRightOf="parent"/>
+        app:rippleColor="@color/white"
+        android:fillColor="@color/white"
+        app:srcCompat="@drawable/ic_baseline_add_24" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
