--- a/app/src/main/res/layout/fragment_trips.xml
+++ b/app/src/main/res/layout/fragment_trips.xml
@@ -5,10 +5,25 @@
     android:layout_height="match_parent"
     tools:context=".fragments.TripsFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_margin="15dp"
+        android:padding="10dp"
+        android:background="@drawable/rounded_corners_white_background">
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="Filters:" />
+        <Spinner
+            android:id="@+id/trips_filters_spinner"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"/>
+    </LinearLayout>
 
 </FrameLayout>
