--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -4,5 +4,5 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.lab.week3_exercise_kt.MainActivity">
     <item android:id="@+id/action_settings" android:orderInCategory="100"
-        android:title="@string/action_settings" app:showAsAction="never" />
+        android:title="Menu" app:showAsAction="never" />
 </menu>
