--- a/app/src/main/res/layout/trips_content.xml
+++ b/app/src/main/res/layout/trips_content.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginTop="70dp"
-    tools:context=".TripsActivity"
+    tools:context=".MainActivity"
     tools:showIn="@layout/trips_filter_bar">
 
     <include
@@ -17,6 +17,7 @@
         android:id="@+id/trips_list"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="70dp"
         app:layout_constraintStart_toStartOf="@id/filter_bar"
         app:layout_constraintTop_toTopOf="@id/filter_bar"
         tools:ignore="MissingConstraints" />
