Updating the locations layout

--- a/app/src/main/res/layout/locations_content.xml
+++ b/app/src/main/res/layout/locations_content.xml
@@ -18,6 +18,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="70dp"
+        android:paddingBottom="70dp"
         app:layout_constraintStart_toStartOf="@id/filter_bar"
         app:layout_constraintTop_toTopOf="@id/filter_bar"
         tools:ignore="MissingConstraints" />
