--- a/app/src/main/res/layout/trips_filter_bar.xml
+++ b/app/src/main/res/layout/trips_filter_bar.xml
@@ -2,8 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".TripsActivity">
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:id="@+id/trips_filter_bar"
@@ -18,7 +17,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="Filters:"
+            android:text="@string/trips_filter_bar"
             android:textSize="20sp"/>
         <Spinner
             android:id="@+id/trips_filters_spinner"
