update the icon color to light grey

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="lightgreen">#0D970B</color>
     <color name="darkgreen">#1F6226</color>
     <color name="darkgrey">#545454</color>
+    <color name="lightgrey">#D3D3D3</color>
 </resources>
