--- a/app/src/main/res/layout/photo_show.xml
+++ b/app/src/main/res/layout/photo_show.xml
@@ -24,7 +24,8 @@
         android:layout_height="wrap_content"
         android:background="@drawable/ic_baseline_keyboard_arrow_left_48"
         android:layout_gravity="start|top"
-        android:translationY="10dp"/>
+        android:translationY="10dp"
+        android:clickable="true"/>
 
     <View
         android:layout_width="wrap_content"
