--- a/app/src/main/res/layout/maps_created_activity.xml
+++ b/app/src/main/res/layout/maps_created_activity.xml
@@ -65,11 +65,12 @@
         android:layout_gravity="bottom|end"
         android:layout_marginTop="25dp"
         android:layout_marginRight="25dp"
+        android:backgroundTint="@color/darkgreen"
         android:elevation="20dp"
         android:src="@drawable/ic_baseline_add_24"
-        app:tint="@color/white"
-        app:rippleColor="@color/white"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/display_title"/>
+        app:layout_constraintTop_toBottomOf="@id/display_title"
+        app:rippleColor="@color/white"
+        app:tint="@color/white" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
