Update the hide soft keyboard function when not using the edit text for LocationEditReviewAcitivity.kt and MapAddActivity.kt Update the input type for map_add_activity.xml

--- a/app/src/main/res/layout/map_add_activity.xml
+++ b/app/src/main/res/layout/map_add_activity.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/on_touch"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".maps.MapAddActivity"
@@ -144,7 +145,7 @@
                             android:background="@drawable/add_new_location_edit_text_border"
                             android:fontFamily="@font/nunito_medium"
                             android:hint="LONGITUDE"
-                            android:inputType="textCapSentences|textAutoCorrect"
+                            android:inputType="numberDecimal"
                             android:paddingLeft="15dp"
                             android:paddingTop="10dp"
                             android:paddingRight="15dp"
@@ -186,7 +187,7 @@
                         android:background="@drawable/add_new_location_edit_text_border"
                         android:fontFamily="@font/nunito_medium"
                         android:hint="LATITUDE"
-                        android:inputType="textCapSentences|textAutoCorrect"
+                        android:inputType="numberDecimal"
                         android:paddingLeft="15dp"
                         android:paddingTop="10dp"
                         android:paddingRight="15dp"
