--- a/app/src/main/res/layout/locations_activity.xml
+++ b/app/src/main/res/layout/locations_activity.xml
@@ -6,20 +6,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginTop="70dp"
-    tools:context=".MainActivity"
-    tools:showIn="@layout/photos_search_bar">
+    tools:context=".fragments.LocationsFragment"
+    tools:showIn="@layout/locations_filter_bar">
 
     <include
-        android:id="@+id/photos_search_bar"
-        layout="@layout/photos_search_bar" />
+        android:id="@+id/filter_bar"
+        layout="@layout/locations_filter_bar" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/photos_list"
+        android:id="@+id/locations_list"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="70dp"
-        android:paddingBottom="60dp"
-        app:layout_constraintStart_toStartOf="@id/photos_search_bar"
-        app:layout_constraintTop_toTopOf="@id/photos_search_bar" />
+        android:paddingBottom="70dp"
+        app:layout_constraintTop_toTopOf="@id/filter_bar"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
